# ship-navigation

./: 404.html  GITHUB_PAGES_部署说明.txt  README.md  YOYO手势修改说明.txt  control-full.html  index.html  ship_control_arduino_hardware_interface.c  ship_control_backend_flask_socketio.py  ship_control_frontend_3d_dashboard.html  智能船舶3D控制平台.html  本次修复说明.txt
.github/workflows/: pages.yml
arduino/: arduino_control.ino  bridge_server.py
ros_gazebo_sim/: CMakeLists.txt  package.xml
ros_gazebo_sim/config/: controller.yaml  costmap_common.yaml  dwa_params.yaml  ekf_localization.yaml  global_costmap.yaml  global_planner_params.yaml  local_costmap.yaml  pure_pursuit_params.yaml
ros_gazebo_sim/launch/: experiment1_straight.launch  experiment2_obstacles.launch  experiment3_dynamic.launch  experiment4_narrow.launch  full_simulation.launch  navigation.launch  world_only.launch
ros_gazebo_sim/scripts/: dwa_planner_node.py  experiment_runner.py  global_planner_node.py  metrics_collector.py  pure_pursuit_node.py
ros_gazebo_sim/urdf/: ship.urdf
ros_gazebo_sim/worlds/: restricted_waterway.world
