<?xml version="1.0"?>
<package format="2">
  <name>ship_navigation_sim</name>
  <version>1.0.0</version>
  <description>面向限制海域的船舶智能航行仿真平台 - ROS-Gazebo联合仿真</description>

  <maintainer email="user@example.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>ros_control</depend>
  <depend>ros_controllers</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_localization</depend>
  <depend>costmap_2d</depend>
  <depend>map_server</depend>
  <depend>rviz</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>